--- a/skillpage_app/templates/base.html
+++ b/skillpage_app/templates/base.html
@@ -25,7 +25,8 @@
         </nav>
 
         <div class="content">
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock %}
         </div>
     </section>
 </body>
