--- a/skillpage_app/templates/skill_confirm_delete.html
+++ b/skillpage_app/templates/skill_confirm_delete.html
@@ -11,7 +11,7 @@
     <form method="post">
         {% csrf_token %}
         <div class="form-actions">
-            <button type="submit" class="btn btn-danger">Yes, Delete</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
             <a href="{% url 'skills' %}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
